<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lp.bookmanager.view.AddBookActivity">


    <EditText
        android:id="@+id/title_add_book"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/authorFN_add_book"
            android:hint="@string/author_FN"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:paddingTop="10dp"/>

        <EditText
            android:id="@+id/authorLN_add_book"
            android:hint="@string/author_LN"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:paddingTop="10dp"/>

        </LinearLayout>

    <EditText
        android:id="@+id/isbn_add_book"
        android:hint="@string/isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/summary_add_book"
        android:hint="@string/summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:paddingTop="10dp"/>

</LinearLayout>
