<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lp.bookmanager.view.SignInActivity"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:id="@+id/title_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/signIn"
            android:textSize="40sp"/>

        <LinearLayout
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_signIn"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login"/>

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/firstName"/>

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/lastName"/>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/birthDate"/>

                <TextView
                    android:id="@+id/birthDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/birthDatePicker"
                    android:src="@drawable/ic_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_vertical"
                    android:text="@string/choose"
                    android:background="@android:color/white"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/mail"/>

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_pw"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/validate"/>

    </RelativeLayout>
</ScrollView>